--- a/index.html
+++ b/index.html
@@ -80,23 +80,33 @@
             data-aos-duration="1000"
             data-aos-easing="ease-in-out" 
             class="project-list__item">
-                <h2>React Movie App</h2>
+                <h2>React Movie App<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
                 <a href="https://mymovie-api.netlify.app/login" target="_blank"><img src="img/react_movie_app_project_full.png"></a>
                 <p>
                     React Client-side for an application called myMovie based on its
                     existing server-side code (REST API and database).
                     User can create an user profile and save their favorite movies.
                 </p>
-                <div class="tags">
-                    <span class="tag">React</span>
-                    <span class="tag">SCSS</span>
-                    <span class="tag">HTML</span>
-                    <span class="tag">JavaScript</span>
-                    <span class="tag">Bootstrap</span>
-                    <span class="tag">Parcel</span>
-                </div>
                 <a href="https://github.com/IsabelWen/movie_api-client" target="_blank" class="button">Code</a>
                 <a href="https://mymovie-api.netlify.app/login" target="_blank" class="button">Demo</a>
+                <dialog class="modal">
+                    <h2>React Movie App</h2>
+                    <img src="img/react_movie_app_project_full.png">
+                    <p>
+                        React Client-side for an application called myMovie based on its
+                        existing server-side code (REST API and database).
+                        User can create an user profile and save their favorite movies.
+                    </p>
+                    <div class="tags">
+                        <span class="tag">React</span>
+                        <span class="tag">SCSS</span>
+                        <span class="tag">HTML</span>
+                        <span class="tag">JavaScript</span>
+                        <span class="tag">Bootstrap</span>
+                        <span class="tag">Parcel</span>
+                    </div>
+                    <button class="close-modal">Close</button>
+                </dialog>
              </div>
              <!-- Project item 2 -->
              <div 
@@ -105,23 +115,32 @@
              data-aos-duration="1000"
              data-aos-easing="ease-in-out" 
              class="project-list__item">
-                <h2>Meet App</h2>
+                <h2>Meet App<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
                 <a href="https://isabelwen.github.io/meet/" target="_blank"><img src="img/meet_app_project_full.png"></a>
                 <p>
                     A serverless, progressive web application (PWA) using a test-driven development (TDD) technique. 
                     The Meet App uses the Google Calendar API to fetch upcoming events.
                 </p>
-                <div class="tags">
-                    <span class="tag">Google Calendar API</span>
-                    <span class="tag">HTML</span>
-                    <span class="tag">CSS</span>
-                    <span class="tag">AWS lambda</span>
-                    <span class="tag">JavaScript</span>
-                    <span class="tag">React</span>
-                    <span class="tag">Recharts</span>
-                </div>
                 <a href="https://github.com/IsabelWen/meet" target="_blank" class="button">Code</a>
                 <a href="https://isabelwen.github.io/meet/" target="_blank" class="button">Demo</a>
+                <dialog class="modal">
+                    <h2>Meet App</h2>
+                    <img src="img/meet_app_project_full.png">
+                    <p>
+                        A serverless, progressive web application (PWA) using a test-driven development (TDD) technique. 
+                        The Meet App uses the Google Calendar API to fetch upcoming events.
+                    </p>
+                    <div class="tags">
+                        <span class="tag">Google Calendar API</span>
+                        <span class="tag">HTML</span>
+                        <span class="tag">CSS</span>
+                        <span class="tag">AWS lambda</span>
+                        <span class="tag">JavaScript</span>
+                        <span class="tag">React</span>
+                        <span class="tag">Recharts</span>
+                    </div>
+                    <button class="close-modal">Close</button>
+                </dialog>
              </div>
              <!-- Project item 3 -->
              <div 
@@ -130,23 +149,33 @@
              data-aos-duration="1000"
              data-aos-easing="ease-in-out" 
              class="project-list__item">
-                <h2>Angular Movie App</h2>
+                <h2>Angular Movie App<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
                 <a href="https://isabelwen.github.io/myMovie-Angular-app/welcome" target="_blank"><img src="img/angular_movie_app_project_full.png"></a>
                 <p>
                     Angular Client-side for an application called myMovie based on its
                     existing server-side code (REST API and database).
                     User can create an user profile and save their favorite movies.
                 </p>
-                <div class="tags">
-                    <span class="tag">Angular</span>
-                    <span class="tag">TypeScript</span>
-                    <span class="tag">HTML</span>
-                    <span class="tag">Angular Material</span>
-                    <span class="tag">SCSS</span>
-                    <span class="tag">TypeDoc</span>
-                </div>
                 <a href="https://github.com/IsabelWen/myMovie-Angular-client" target="_blank" class="button">Code</a>
                 <a href="https://isabelwen.github.io/myMovie-Angular-app/welcome" target="_blank" class="button">Demo</a>
+                <dialog class="modal">
+                    <h2>Angular Movie App</h2>
+                    <img src="img/angular_movie_app_project_full.png">
+                    <p>
+                        Angular Client-side for an application called myMovie based on its
+                        existing server-side code (REST API and database).
+                        User can create an user profile and save their favorite movies.
+                    </p>
+                    <div class="tags">
+                        <span class="tag">Angular</span>
+                        <span class="tag">TypeScript</span>
+                        <span class="tag">HTML</span>
+                        <span class="tag">Angular Material</span>
+                        <span class="tag">SCSS</span>
+                        <span class="tag">TypeDoc</span>
+                    </div>
+                    <button class="close-modal">Close</button>
+                </dialog>
              </div>
              <!-- Project item 4 -->
              <div 
@@ -155,32 +184,31 @@
              data-aos-duration="1000"
              data-aos-easing="ease-in-out" 
              class="project-list__item">
-                <h2>myMovie API</h2>
+                <h2>myMovie API<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
                 <a href="https://github.com/IsabelWen/movie_api" target="_blank"><img src="img/mymovie-db.png"></a>
                 <p>
                     This API provide users with access to information about different movies, directors, and genres. 
                     Users are able to sign up, update their personal information, and create a list of their favorite movies.
                 </p>
                 <a href="https://github.com/IsabelWen/movie_api" target="_blank" class="button">Code</a>
-                <a class="open-modal button">More</a>
+                <dialog class="modal">
+                    <h2>myMovie API</h2>
+                    <img src="img/mymovie-db.png">
+                    <p>
+                        This API provide users with access to information about different movies, directors, and genres. 
+                        Users are able to sign up, update their personal information, and create a list of their favorite movies.
+                    </p>
+                    <div class="tags">
+                        <span class="tag">HTML</span>
+                        <span class="tag">MongoDB</span>
+                        <span class="tag">Mongoose</span>
+                        <span class="tag">JavaScript</span>
+                        <span class="tag">Express</span>
+                        <span class="tag">Postman</span>
+                    </div>
+                    <button class="close-modal">Close</button>
+                 </dialog>
              </div>
-             <dialog class="modal">
-                <h2>myMovie API</h2>
-                <img src="img/mymovie-db.png">
-                <p>
-                    This API provide users with access to information about different movies, directors, and genres. 
-                    Users are able to sign up, update their personal information, and create a list of their favorite movies.
-                </p>
-                <div class="tags">
-                    <span class="tag">HTML</span>
-                    <span class="tag">MongoDB</span>
-                    <span class="tag">Mongoose</span>
-                    <span class="tag">JavaScript</span>
-                    <span class="tag">Express</span>
-                    <span class="tag">Postman</span>
-                </div>
-                <button class="close-modal">Close</button>
-             </dialog>
              <!-- Project item 5 -->
              <div 
              data-aos="fade-up" 
@@ -188,30 +216,29 @@
              data-aos-duration="1000"
              data-aos-easing="ease-in-out" 
              class="project-list__item">
-                <h2>Chat App</h2>
+                <h2>Chat App<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
                 <a href="https://github.com/IsabelWen/chat" target="_blank"><img src="img/chat-app.png"></a>
                 <p>
                     A chat app for mobile devices using React Native. The app provides users with a chat interface and options to share images, audios and location.
                 </p>
                 <a href="https://github.com/IsabelWen/chat" target="_blank" class="button">Code</a>
-                <a class="open-modal button">More</a>
+                <dialog class="modal">
+                    <h2>Chat App</h2>
+                    <img src="img/chat-app.png">
+                    <p>
+                        A chat app for mobile devices using React Native. The app provides users with a chat interface and options to share images, audios and location.
+                    </p>
+                    <div class="tags">
+                        <span class="tag">React Native</span>
+                        <span class="tag">Firebase</span>
+                        <span class="tag">Firestore</span>
+                        <span class="tag">JavaScript</span>
+                        <span class="tag">Expo</span>
+                        <span class="tag">GiftedChat</span>
+                    </div>
+                    <button class="close-modal">Close</button>
+                 </dialog>
              </div>
-             <dialog class="modal">
-                <h2>Chat App</h2>
-                <img src="img/chat-app.png">
-                <p>
-                    A chat app for mobile devices using React Native. The app provides users with a chat interface and options to share images, audios and location.
-                </p>
-                <div class="tags">
-                    <span class="tag">React Native</span>
-                    <span class="tag">Firebase</span>
-                    <span class="tag">Firestore</span>
-                    <span class="tag">JavaScript</span>
-                    <span class="tag">Expo</span>
-                    <span class="tag">GiftedChat</span>
-                </div>
-                <button class="close-modal">Close</button>
-             </dialog>
              <!-- Project item 6 -->
              <div 
              data-aos="fade-up" 
@@ -219,21 +246,30 @@
              data-aos-duration="1000"
              data-aos-easing="ease-in-out" 
              class="project-list__item">
-                <h2>Pokemon-Index</h2>
+                <h2>Pokemon-Index<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
                 <a href="https://isabelwen.github.io/simple-js-app/" target="_blank"><img src="img/pokemon-index.png"></a>
                 <p>
                     A small web application with HTML, CSS, and JavaScript that loads data about pokemons from an external API 
                     and enables the viewing of data points in detail.
                 </p>
-                <div class="tags">
-                    <span class="tag">JavaScript</span>
-                    <span class="tag">HTML</span>
-                    <span class="tag">CSS</span>
-                    <span class="tag">Bootstrap</span>
-                    <span class="tag">jQuery</span>
-                </div>
                 <a href="https://github.com/IsabelWen/simple-js-app" target="_blank" class="button">Code</a>
                 <a href="https://isabelwen.github.io/simple-js-app/" target="_blank" class="button">Demo</a>
+                <dialog class="modal" >
+                    <h2>Pokemon-Index</h2>
+                    <img src="img/pokemon-index.png">
+                    <p>
+                        A small web application with HTML, CSS, and JavaScript that loads data about pokemons from an external API 
+                        and enables the viewing of data points in detail.
+                    </p>
+                    <div class="tags">
+                        <span class="tag">JavaScript</span>
+                        <span class="tag">HTML</span>
+                        <span class="tag">CSS</span>
+                        <span class="tag">Bootstrap</span>
+                        <span class="tag">jQuery</span>
+                    </div>
+                    <button class="close-modal">Close</button>
+                </dialog>
              </div>
         </div>
     </section>
