Add case study chat app

--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
                     A chat app for mobile devices using React Native. The app provides users with a chat interface and options to share images, audios and location.
                 </p>
                 <a href="https://github.com/IsabelWen/chat" target="_blank" class="button">Code</a>
+                <a href="files/Case Study – Chat App.pdf" target="_blank" class="button">Case</a>
                 <dialog class="modal">
                     <h2>Chat App</h2>
                     <img src="img/chat-app.png">
