Update project modal imgs

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <a href="https://isabelwen.github.io/meet/" target="_blank" class="button">Demo</a>
                 <dialog class="modal">
                     <h2>Meet App</h2>
-                    <img src="img/meet_app_project_full.png">
+                    <img src="img/meet_app_project.png">
                     <p>
                         A serverless, progressive web application (PWA) using a test-driven development (TDD) technique. 
                         The Meet App uses the Google Calendar API to fetch upcoming events.
@@ -160,7 +160,7 @@
                 <a href="https://isabelwen.github.io/myMovie-Angular-app/welcome" target="_blank" class="button">Demo</a>
                 <dialog class="modal">
                     <h2>Angular Movie App</h2>
-                    <img src="img/angular_movie_app_project_full.png">
+                    <img src="img/angular_movie_app_project.png">
                     <p>
                         Angular Client-side for an application called myMovie based on its
                         existing server-side code (REST API and database).
@@ -185,7 +185,7 @@
              data-aos-easing="ease-in-out" 
              class="project-list__item">
                 <h2>myMovie API<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
-                <a href="https://github.com/IsabelWen/movie_api" target="_blank"><img src="img/mymovie-db.png"></a>
+                <a href="https://github.com/IsabelWen/movie_api" target="_blank"><img src="img/mymovie-db_full.png"></a>
                 <p>
                     This API provide users with access to information about different movies, directors, and genres. 
                     Users are able to sign up, update their personal information, and create a list of their favorite movies.
@@ -217,7 +217,7 @@
              data-aos-easing="ease-in-out" 
              class="project-list__item">
                 <h2>Chat App<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
-                <a href="https://github.com/IsabelWen/chat" target="_blank"><img src="img/chat-app.png"></a>
+                <a href="https://github.com/IsabelWen/chat" target="_blank"><img src="img/chat-app_full.png"></a>
                 <p>
                     A chat app for mobile devices using React Native. The app provides users with a chat interface and options to share images, audios and location.
                 </p>
@@ -248,7 +248,7 @@
              data-aos-easing="ease-in-out" 
              class="project-list__item">
                 <h2>Pokemon-Index<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
-                <a href="https://isabelwen.github.io/simple-js-app/" target="_blank"><img src="img/pokemon-index.png"></a>
+                <a href="https://isabelwen.github.io/simple-js-app/" target="_blank"><img src="img/pokemon-index_full.png"></a>
                 <p>
                     A small web application with HTML, CSS, and JavaScript that loads data about pokemons from an external API 
                     and enables the viewing of data points in detail.
