Add icon for close-modal

--- a/index.html
+++ b/index.html
@@ -90,22 +90,43 @@
                 <a href="https://github.com/IsabelWen/movie_api-client" target="_blank" class="button">Code</a>
                 <a href="https://mymovie-api.netlify.app/login" target="_blank" class="button">Demo</a>
                 <dialog class="modal">
-                    <h2>React Movie App</h2>
+                    <h2>React Movie App<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
                     <img src="img/react_movie_app_project.png">
                     <p>
                         React Client-side for an application called myMovie based on its
                         existing server-side code (REST API and database).
                         User can create an user profile and save their favorite movies.
                     </p>
+                    <h3>Functions</h3>
+                    <ul>
+                        <li>Retrieve all movies with their details, including images, titles, descriptions, genres, and 
+                            directors, and implement a search feature to filter movies.
+                        </li>
+                        <li>Provide detailed information about a single movie in a single movie view, including description, 
+                            genre, director, and image.
+                        </li>
+                        <li>
+                            Allow users to log in with a username and password, enable new users to register with required 
+                            information (username, password, email, date of birth), and allow users to add a movie to their 
+                            list of favorites.
+                        </li>
+                        <li>
+                            Allow users to update their information, view favorite movies, remove movies from their favorites 
+                            list, and provide an option for existing users to deregister.
+                        </li>
+                        <li>
+                            Allow users to filter movies by genre.
+                        </li>
+                    </ul>
                     <div class="tags">
                         <span class="tag">React</span>
                         <span class="tag">SCSS</span>
                         <span class="tag">HTML</span>
                         <span class="tag">JavaScript</span>
-                        <span class="tag">Bootstrap</span>
+                        <span class="tag">React-Bootstrap</span>
+                        <span class="tag">Netlify</span>
                         <span class="tag">Parcel</span>
                     </div>
-                    <button class="close-modal">Close</button>
                 </dialog>
              </div>
              <!-- Project item 2 -->
@@ -124,7 +145,7 @@
                 <a href="https://github.com/IsabelWen/meet" target="_blank" class="button">Code</a>
                 <a href="https://isabelwen.github.io/meet/" target="_blank" class="button">Demo</a>
                 <dialog class="modal">
-                    <h2>Meet App</h2>
+                    <h2>Meet App<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
                     <img src="img/meet_app_project.png">
                     <p>
                         A serverless, progressive web application (PWA) using a test-driven development (TDD) technique. 
@@ -139,7 +160,6 @@
                         <span class="tag">React</span>
                         <span class="tag">Recharts</span>
                     </div>
-                    <button class="close-modal">Close</button>
                 </dialog>
              </div>
              <!-- Project item 3 -->
@@ -159,7 +179,7 @@
                 <a href="https://github.com/IsabelWen/myMovie-Angular-client" target="_blank" class="button">Code</a>
                 <a href="https://isabelwen.github.io/myMovie-Angular-app/welcome" target="_blank" class="button">Demo</a>
                 <dialog class="modal">
-                    <h2>Angular Movie App</h2>
+                    <h2>Angular Movie App<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
                     <img src="img/angular_movie_app_project.png">
                     <p>
                         Angular Client-side for an application called myMovie based on its
@@ -174,7 +194,6 @@
                         <span class="tag">SCSS</span>
                         <span class="tag">TypeDoc</span>
                     </div>
-                    <button class="close-modal">Close</button>
                 </dialog>
              </div>
              <!-- Project item 4 -->
@@ -192,7 +211,7 @@
                 </p>
                 <a href="https://github.com/IsabelWen/movie_api" target="_blank" class="button">Code</a>
                 <dialog class="modal">
-                    <h2>myMovie API</h2>
+                    <h2>myMovie API<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
                     <img src="img/mymovie-db.png">
                     <p>
                         This API provide users with access to information about different movies, directors, and genres. 
@@ -206,7 +225,6 @@
                         <span class="tag">Express</span>
                         <span class="tag">Postman</span>
                     </div>
-                    <button class="close-modal">Close</button>
                  </dialog>
              </div>
              <!-- Project item 5 -->
@@ -224,7 +242,7 @@
                 <a href="https://github.com/IsabelWen/chat" target="_blank" class="button">Code</a>
                 <a href="files/Case Study – Chat App.pdf" target="_blank" class="button">Case</a>
                 <dialog class="modal">
-                    <h2>Chat App</h2>
+                    <h2>Chat App<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
                     <img src="img/chat-app.png">
                     <p>
                         A chat app for mobile devices using React Native. The app provides users with a chat interface and options to share images, audios and location.
@@ -237,7 +255,6 @@
                         <span class="tag">Expo</span>
                         <span class="tag">GiftedChat</span>
                     </div>
-                    <button class="close-modal">Close</button>
                  </dialog>
              </div>
              <!-- Project item 6 -->
@@ -256,7 +273,7 @@
                 <a href="https://github.com/IsabelWen/simple-js-app" target="_blank" class="button">Code</a>
                 <a href="https://isabelwen.github.io/simple-js-app/" target="_blank" class="button">Demo</a>
                 <dialog class="modal" >
-                    <h2>Pokemon-Index</h2>
+                    <h2>Pokemon-Index<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
                     <img src="img/pokemon-index.png">
                     <p>
                         A small web application with HTML, CSS, and JavaScript that loads data about pokemons from an external API 
@@ -269,7 +286,6 @@
                         <span class="tag">Bootstrap</span>
                         <span class="tag">jQuery</span>
                     </div>
-                    <button class="close-modal">Close</button>
                 </dialog>
              </div>
         </div>
