Add informations to project modals

--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
                 <a href="https://mymovie-api.netlify.app/login" target="_blank" class="button">Demo</a>
                 <dialog class="modal">
                     <h2>React Movie App<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
-                    <img src="img/react_movie_app_project.png">
                     <p>
                         React Client-side for an application called myMovie based on its
                         existing server-side code (REST API and database).
@@ -146,11 +145,31 @@
                 <a href="https://isabelwen.github.io/meet/" target="_blank" class="button">Demo</a>
                 <dialog class="modal">
                     <h2>Meet App<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
-                    <img src="img/meet_app_project.png">
                     <p>
                         A serverless, progressive web application (PWA) using a test-driven development (TDD) technique. 
                         The Meet App uses the Google Calendar API to fetch upcoming events.
                     </p>
+                    <h3>Features</h3>
+                    <ul>
+                        <li>
+                            Users can filter events by city, show/hide event details, and specify the number of events 
+                            to display.
+                        </li>
+                        <li>
+                            The app supports offline usage, allows adding shortcuts to the home screen, and offers visual 
+                            charts for event details.
+                        </li>
+                        <li>
+                            It integrates Google Calendar API for event retrieval and OAuth2 for authentication.
+                        </li>
+                        <li>
+                            Serverless functions (AWS Lambda) for authorization server.
+                        </li>
+                        <li>
+                            Responsiveness to various screen sizes, and adherence to PWA 
+                            standards ensure a seamless user experience.
+                        </li>
+                    </ul>
                     <div class="tags">
                         <span class="tag">Google Calendar API</span>
                         <span class="tag">HTML</span>
@@ -180,12 +199,33 @@
                 <a href="https://isabelwen.github.io/myMovie-Angular-app/welcome" target="_blank" class="button">Demo</a>
                 <dialog class="modal">
                     <h2>Angular Movie App<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
-                    <img src="img/angular_movie_app_project.png">
                     <p>
                         Angular Client-side for an application called myMovie based on its
                         existing server-side code (REST API and database).
                         User can create an user profile and save their favorite movies.
                     </p>
+                    <h3>Features</h3>
+                    <ul>
+                        <li>
+                            Retrieve all movies with their details, including images, titles, descriptions, genres, and 
+                            directors, and implement a search feature to filter movies.
+                        </li>
+                        <li>
+                            Provide detailed information about a single movie, including description, genre, and director.
+                        </li>
+                        <li>
+                            Allow users to log in with a username and password, enable new users to register with required 
+                            information (username, password, email, date of birth), and allow users to add a movie to their 
+                            list of favorites.
+                        </li>
+                        <li>
+                            Allow users to update their information, view favorite movies, remove movies from their favorites 
+                            list, and provide an option for existing users to deregister.
+                        </li>
+                        <li>
+                            Allow users to filter movies by genre.
+                        </li>
+                    </ul>
                     <div class="tags">
                         <span class="tag">Angular</span>
                         <span class="tag">TypeScript</span>
@@ -212,11 +252,29 @@
                 <a href="https://github.com/IsabelWen/movie_api" target="_blank" class="button">Code</a>
                 <dialog class="modal">
                     <h2>myMovie API<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
-                    <img src="img/mymovie-db.png">
                     <p>
                         This API provide users with access to information about different movies, directors, and genres. 
                         Users are able to sign up, update their personal information, and create a list of their favorite movies.
                     </p>
+                    <h3>Features</h3>
+                    <ul>
+                        <li>
+                            The API serves as the backend for the myMovie web application, providing data about movies.
+                        </li>
+                        <li>
+                            Users of the myFlix application can access movie information, director details, and genre 
+                            descriptions through the API endpoints.
+                        </li>
+                        <li>
+                            The API handles user registration, profile updates, and favorite movies lists.
+                        </li>
+                        <li>
+                            To maintain data security and integrity, the API incorporates user authentication, authorization, and data validation logic.
+                        </li>
+                        <li>
+                            The API has been tested using Postman to verify its performance and functionality.
+                        </li>
+                    </ul>
                     <div class="tags">
                         <span class="tag">HTML</span>
                         <span class="tag">MongoDB</span>
@@ -243,10 +301,31 @@
                 <a href="files/Case Study – Chat App.pdf" target="_blank" class="button">Case</a>
                 <dialog class="modal">
                     <h2>Chat App<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
-                    <img src="img/chat-app.png">
                     <p>
                         A chat app for mobile devices using React Native. The app provides users with a chat interface and options to share images, audios and location.
                     </p>
+                    <h3>Features</h3>
+                    <ul>
+                        <li>
+                            Users can enter chat rooms to communicate with friends and family, selecting background 
+                            colors for personalized chat screens.
+                        </li>
+                        <li>
+                            Conversations are displayed with an input field for sending messages, supporting additional 
+                            features like image, audio and location sharing.
+                        </li>
+                        <li>
+                            Users can send images from their device's image library or take pictures with the camera app and 
+                            send them within the chat.
+                        </li>
+                        <li>
+                            Messages are stored both online and offline, allowing users to access conversations at any time.
+                        </li>
+                        <li>
+                            Chat conversations are stored in Google Firestore Database and authenticated anonymously 
+                            via Google Firebase.
+                        </li>
+                    </ul>
                     <div class="tags">
                         <span class="tag">React Native</span>
                         <span class="tag">Firebase</span>
@@ -274,11 +353,26 @@
                 <a href="https://isabelwen.github.io/simple-js-app/" target="_blank" class="button">Demo</a>
                 <dialog class="modal">
                     <h2>Pokemon-Index<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
-                    <img src="img/pokemon-index.png">
                     <p>
                         A small web application with HTML, CSS, and JavaScript that loads data about pokemons from an external API 
                         and enables the viewing of data points in detail.
                     </p>
+                    <h3>Features</h3>
+                    <ul>
+                        <li>
+                            Users can view a list of Pokémons and see more details for a selected Pokémon.
+                        </li>
+                        <li>
+                            The app loads data from an external API (Pokémon API) and displays it after the page is loaded.
+                        </li>
+                        <li>
+                            It enables users to view additional details for a Pokémon, upon clicking on the item, 
+                            which will open a modal.
+                        </li>
+                        <li>
+                            The user can search for Pokémons.
+                        </li>
+                    </ul>
                     <div class="tags">
                         <span class="tag">JavaScript</span>
                         <span class="tag">HTML</span>
