--- a/index.html
+++ b/index.html
@@ -178,6 +178,10 @@
                         <span class="tag">JavaScript</span>
                         <span class="tag">React</span>
                         <span class="tag">Recharts</span>
+                        <span class="tag">Jest</span>
+                        <span class="tag">Cucumber</span>
+                        <span class="tag">Puppeteer</span>
+                        <span class="tag">OAuth2</span>
                     </div>
                 </dialog>
              </div>
@@ -280,8 +284,12 @@
                         <span class="tag">MongoDB</span>
                         <span class="tag">Mongoose</span>
                         <span class="tag">JavaScript</span>
+                        <span class="tag">Node.js</span>
                         <span class="tag">Express</span>
                         <span class="tag">Postman</span>
+                        <span class="tag">JSDoc</span>
+                        <span class="tag">CORS</span>
+                        <span class="tag">Render</span>
                     </div>
                  </dialog>
              </div>
@@ -333,6 +341,7 @@
                         <span class="tag">JavaScript</span>
                         <span class="tag">Expo</span>
                         <span class="tag">GiftedChat</span>
+                        <span class="tag">Android Studio </span>
                     </div>
                  </dialog>
              </div>
