--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
                     Hello! My name is Isabel Matula and I’m a certified Full-Stack Developer with an educational background in business administration. 
                     I discovered my passion for coding during my Bachelor at the Free University of Berlin. 
                     Throughout foundational modules and career preparation courses, 
-                    I gained initial experiences with programming languages such as Python, R, PHP, and SQL. 
+                    I gained initial experiences with programming languages such as <strong>Python</strong>, <strong>R</strong>, 
+                    <strong>PHP</strong>, and <strong>SQL</strong>. 
                     My professional journey includes an internship as an HR Generalist, 
                     organizing events, managing schedules, and supporting a team of 30 employees. 
                     Prior to this, I provided tailored German tutoring while attending the Chinese Learning Program in Taipei. 
-                    To make my coding passion my profession, I completed Career Foundry's Full-Stack Web Developer program, learning JavaScript, React, NoSQL and more. 
+                    To make my coding passion my profession, I completed Career Foundry's Full-Stack Web Developer program, 
+                    learning <strong>JavaScript</strong>, <strong>React</strong>, <strong>NoSQL</strong> and more. 
                     Now, I'm on the lookout for a role that values continuous growth. 
                 </p>
                 <a href="files/Matula_Isabel_Resume.pdf" target="_blank" download>Download my resume.</a>
