--- a/index.html
+++ b/index.html
@@ -394,6 +394,40 @@
                 </dialog>
              </div>
         </div>
+        <!-- Toolbelt -->
+        <div class="toolbelt">
+            <h1>Toolbelt</h1>
+            <div class="toolbelt__logos">
+                <img src="img/tool-logos/Angular.svg" alt="Angular logo">
+                <img src="img/tool-logos/Bootstrap.svg" alt="Bootstrap logo">
+                <img src="img/tool-logos/CSS3.svg" alt="CSS3 logo">
+                <img src="img/tool-logos/Firebase.svg" alt="Firebase logo">
+                <img src="img/tool-logos/GitHub.svg" alt="GitHub logo">
+                <img src="img/tool-logos/HTML5.svg" alt="HTML5 logo">
+                <img src="img/tool-logos/Javascript.svg" alt="Javascript logo">
+                <img src="img/tool-logos/MongoDB.svg" alt="MongoDB logo">
+                <img src="img/tool-logos/Node_js.svg" alt="Node.js logo">
+                <img src="img/tool-logos/Python.svg" alt="Python logo">
+                <img src="img/tool-logos/React.svg" alt="React logo">
+                <img src="img/tool-logos/Sql.svg" alt="SQL logo">
+                <img src="img/tool-logos/Visual_Studio.svg" alt="Visual Studio logo">
+            </div>
+            <div class="toolbelt__logos">
+                <img src="img/tool-logos/Angular.svg" alt="Angular logo">
+                <img src="img/tool-logos/Bootstrap.svg" alt="Bootstrap logo">
+                <img src="img/tool-logos/CSS3.svg" alt="CSS3 logo">
+                <img src="img/tool-logos/Firebase.svg" alt="Firebase logo">
+                <img src="img/tool-logos/GitHub.svg" alt="GitHub logo">
+                <img src="img/tool-logos/HTML5.svg" alt="HTML5 logo">
+                <img src="img/tool-logos/Javascript.svg" alt="Javascript logo">
+                <img src="img/tool-logos/MongoDB.svg" alt="MongoDB logo">
+                <img src="img/tool-logos/Node_js.svg" alt="Node.js logo">
+                <img src="img/tool-logos/Python.svg" alt="Python logo">
+                <img src="img/tool-logos/React.svg" alt="React logo">
+                <img src="img/tool-logos/Sql.svg" alt="SQL logo">
+                <img src="img/tool-logos/Visual_Studio.svg" alt="Visual Studio logo">
+            </div>
+        </div>
     </section>
     <!-- Contact Information -->
     <section id="contact"
